# humid

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  python-package.yml  test.yml
docs/: all.md  index.md  public_api_only.md
examples/: basics.py
experiments/: RECORD_SHELL.sh  animals.py  experiments.py
search/: search_index.json
src/humid/: __init__.py  __main__.py  _core.py  cli.py  core.py  helpers.py  main.py
src/humid/_words/: __init__.py  age.py  animals.py  colors.py  materials.py  opininions.py  origins.py  pokemons.py  purposes.py  quantities.py  shapes.py  size.py  sizes.py
src/humid/words/: animals.py  colors.py  opininions.py  origin.py  pokemon.py  purpose.py  quantity.py  shape.py  size.py
tests/: test_basic.py  test_cli.py  test_collision.py  test_performance.py  test_probabilty.py  test_words.py
