[project]
name = "humid"
version = "0.2.0"
description = "Human Friendly UUIDs that are readable and pronounceable."
authors = [{ name = "W. Meijer", email = "houterm+humid@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "UUID",
    "ID",
    "identifier",
    "unique",
    "readable",
    "human friendly",
    "pronouncable",
    "adjective",
    "word",
    "noun",
]
classifiers = ['Programming Language :: Python :: 3']
dependencies = [
    "typing-extensions>=4.12.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.2", "pre-commit>=3.5.0", "uniplot>=0.14.1"]
docs = ["mkdocs-material>=9.5.33", "mkdocstrings-python>=1.10.9"]

[project.scripts]
humid = "humid.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
build.package-dir = "src"
